[package]
name = "fugue-radare"
version = "0.2.1"
edition = "2018"

[dependencies]
flatbuffers = "2.0"
fugue-db = { version = "0.2", registry = "fugue", default-features = false }
intervals = { version = "0.1", registry = "fugue" }
itertools = "0.10"
md5 = "0.7"
sha2 = "0.9"
memmap = "0.7"
r2pipe = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared_memory = "0.12"
thiserror = "1"
which = "4"
url = "2.2"

[build-dependencies]
flatc-rust = "0.2"
flatc = "0.2.1"
