[package]
name = "fugue-radare"
version = "0.2.3"
edition = "2018"

[features]
default = ["bigint"]
bigint = ["fugue-db/bigint"]
fixed-u64 = ["fugue-db/fixed-u64"]
fixed-u128 = ["fugue-db/fixed-u128"]

[dependencies]
# fugue-db = { version = "0.2", default-features = false, features = ["fixed-u64","db"]}
fugue-db = { version = "0.2", default-features = false}
iset = "0.2"
itertools = "0.10"
md5 = "0.7"
sha2 = "0.9"
memmap = "0.7"
r2pipe = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared_memory = "0.12"
thiserror = "1"
which = "4"
url = "2.2"
flatbuffers = "23.1.21"

[build-dependencies]
flatcc = "23.1.21"

[dev-dependencies]
fugue = { version = "0.2", default-features = false}
